// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots should match snapshot 1`] = `
<svg
  fill="#231B22"
  height={16}
  style={
    Array [
      Object {
        "height": 16,
        "width": 16,
      },
    ]
  }
  width={16}
>
  <circle
    cx="16"
    cy="16"
    r="16"
  />
</svg>
`;

exports[`Snapshots should match snapshot with size prop 1`] = `
<svg
  fill="#231B22"
  height={16}
  style={
    Array [
      Object {
        "height": 16,
        "width": 16,
      },
    ]
  }
  width={16}
>
  <circle
    cx="16"
    cy="16"
    r="16"
  />
</svg>
`;

exports[`Snapshots should match snapshot with system props 1`] = `
<svg
  elevation="medium"
  fill="#231B22"
  height={16}
  margin="medium"
  style={
    Array [
      Object {
        "height": 16,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 20,
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 5,
        "width": 16,
      },
    ]
  }
  width={16}
>
  <circle
    cx="16"
    cy="16"
    r="16"
  />
</svg>
`;
